--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --background: ##EFEFEF;
+  --background: #EFEFEF;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: ##EFEFEF;
+    --background: #EFEFEF;
     --foreground: #000;
   }
 }
